// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all parameters 1`] = `
<div
  className="page page-test"
>
  test
</div>
`;

exports[`renders correctly with id only 1`] = `
<div
  className="page page-base page-test"
>
  test
</div>
`;
